[package]
name = "rust-relay"
version = "0.1.0"
edition = "2021"
authors = [ "SnowCait <SnowCait@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4" }
worker-macros = { version="0.3.4" }
console_error_panic_hook = { version = "0.1.1" }
futures = "0.3.30"
nostr = "0.34.1"
